# scratchstack

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  coverage-report.sh  coverage-run.sh  coverage-show.sh  diesel.toml  docker-compose.yml  generate-env  iam.db  index.html  rustfmt.toml  scratchstack.cfg
core-legacy/: Cargo.toml  README.md  coverage-run.py  install-hooks  publish
lib/scratchstack-config/: Cargo.toml
lib/scratchstack-config/src/: config.rs  error.rs  resolved.rs
lib/scratchstack-get-signing-key-direct/: Cargo.toml
lib/scratchstack-get-signing-key-direct/src/: lib.rs  util.rs
principal/: Cargo.toml
principal/fuzz/: Cargo.toml  dict.txt
principal/fuzz/fuzz_targets/: principal.rs
principal/src/: assumed_role.rs  canonical_user.rs  error.rs  federated_user.rs  lib.rs  principal.rs  root_user.rs  service.rs  session.rs  traits.rs  user.rs  utils.rs
scratchstack-arn/: Cargo.toml
scratchstack-arn/fuzz/: Cargo.toml  dict.txt
scratchstack-arn/fuzz/fuzz_targets/: arn_from_str.rs
scratchstack-arn/src/: arn.rs  error.rs  lib.rs  pattern.rs  utils.rs
scratchstack-aspen/: .gitignore  Cargo.toml  README.md  coverage-run.py
scratchstack-aspen/.github/workflows/: rust.yml
scratchstack-aspen/git-hooks/: pre-commit
scratchstack-aspen/src/: action.rs  condition.rs  effect.rs  error.rs  eval.rs  lib.rs  macros.rs  policy.rs  policyset.rs  resource.rs  serutil.rs  statement.rs  test-policy-1.json  test-policy-2.json
scratchstack-aspen/src/condition/: arn.rs  binary.rs  boolean.rs  date.rs  ipaddr.rs  mod.rs  null.rs  numeric.rs  op.rs  op_tests.rs  string.rs  tests.rs  variant.rs
scratchstack-aspen/src/principal/: aws.rs  mod.rs  specified.rs
scratchstack-aspen/src/resource/: arn.rs  mod.rs
scratchstack-aws-principal/: Cargo.toml
scratchstack-aws-principal/src/: assumed_role.rs  canonical_user.rs  federated_user.rs  lib.rs  principal.rs  root_user.rs  service.rs  session.rs  user.rs  utils.rs
scratchstack-aws-signature/: Cargo.toml
scratchstack-aws-signature/src/: auth.rs  aws4.rs  body.rs  canonical.rs  constants.rs  crypto.rs  error.rs  lib.rs  migration.rs  signature.rs  signing_key.rs
scratchstack-bootstrap/: Cargo.toml
scratchstack-bootstrap/src/: account.rs  migrate.rs  partition.rs  ssbs.rs  tests.rs  user.rs
scratchstack-cli-utils/: Cargo.toml
scratchstack-cli-utils/src/: lib.rs  shorthand.rs
scratchstack-config/: .gitignore  Cargo.toml  LICENSE  README.md
scratchstack-config/src/: config.rs  database.rs  error.rs  lib.rs  tls.rs
scratchstack-config/src/service/: iam.rs  mod.rs  sts.rs
scratchstack-database/: Cargo.toml  build.rs  compose.yaml
scratchstack-database/migrations/: 0001_iam_initial.down.sql  0001_iam_initial.up.sql
scratchstack-database/migrations/iam/: 0001_iam_initial.down.sql  0001_iam_initial.up.sql  0002_iam_user_tags.down.sql  0002_iam_user_tags.up.sql  0003_partition_rename.down.sql  0003_partition_rename.up.sql
scratchstack-database/src/: constants.rs  core.rs  gsk_direct.rs  lib.rs  utils.rs
scratchstack-database/src/constants/: iam.rs  mod.rs
scratchstack-database/src/model/: account.rs  mod.rs
scratchstack-database/src/model/iam/: account.rs  constants.rs  database.rs  group.rs  group_attached_policy.rs  group_inline_policy.rs  group_membership.rs  id.rs  managed_policy.rs  managed_policy_version.rs  mod.rs  password_hash_algorithm.rs  role.rs  role_attached_policy.rs  role_inline_policy.rs  role_session_token_key.rs  user.rs  user_attached_policy.rs  user_credential.rs  user_inline_policy.rs  user_login_profile.rs  user_password_history.rs  user_service_specific_credential.rs  user_ssh_public_key.rs
scratchstack-database/src/ops/: iam.rs  mod.rs
scratchstack-database/src/ops/iam/: account.rs  create_account.rs  create_user.rs  get_current_partition.rs  list_accounts.rs  mod.rs  partition.rs  set_current_partition.rs  user.rs
scratchstack-database/tests/: gsk_sqlite_test.rs  iam_database.json  iam_database.rs  test_data.toml  util.rs
scratchstack-errors/: Cargo.toml
scratchstack-errors/src/: lib.rs
scratchstack-http-framework/: .gitignore  Cargo.toml  README.md
scratchstack-http-framework/.github/workflows/: rust.yml
scratchstack-http-framework/src/: constants.rs  gsk_direct.rs  lib.rs  request_id.rs  service_spawn.rs  sigv4.rs  tls.rs
scratchstack-pagination/: Cargo.toml
scratchstack-pagination/src/: lib.rs
scratchstack-service-sts/: Cargo.toml
scratchstack-service-sts/src/: constants.rs  main.rs  service.rs
scratchstack-service-sts/src/error/: service.rs
scratchstack-service-sts/src/model/: mod.rs  response.rs
scratchstack-service-sts/src/operations/: get_caller_identity.rs  mod.rs
scratchstack-services/lib/scratchstack-get-signing-key-direct/: Cargo.toml
scratchstack-services/lib/scratchstack-schema/: Cargo.toml
scratchstack-services/lib/scratchstack_aspen/: Cargo.toml  lib.rs  unittest.rs
scratchstack-services/service-iam/: Cargo.toml
scratchstack-services/service-iam/src/: main.rs
scratchstack-services/services/iam/: Cargo.toml
scratchstack-services/services/iam/src/: tls.rs  (+3 more)
scratchstack-services/services/limitstore/: Cargo.toml
scratchstack-shapegen/: Cargo.toml
scratchstack-shapegen/src/: enum.rs  int_enum.rs  length_constraint.rs  lib.rs  list.rs  map.rs  member.rs  operation.rs  primitive.rs  range_constraint.rs  resource.rs  service.rs  shape.rs  shape_base.rs  shape_ref.rs  smithy_model.rs  str_ext.rs  structure.rs  trait_id.rs  trait_map.rs  union.rs
scratchstack-shapes/: Cargo.toml
scratchstack-shapes-iam/: Cargo.toml  build.rs  iam-2010-05-08.json
scratchstack-shapes-iam/src/: clap_utils.rs  iam.rs  lib.rs  shorthand.rs
scratchstack-shapes/src/: lib.rs  shorthand.rs
scratchstack-shapes/src/iam/: account_id.rs  mod.rs  path.rs  policy.rs  tag.rs  user.rs
service-sts/: Cargo.toml
service-sts/src/: main.rs
service-sts/src/error/: mod.rs
service-sts/src/model/: response.rs
service-sts/src/operations/: mod.rs
services/iam/: Cargo.toml
services/iam/src/: config.rs  main.rs  service.rs  tls.rs
(+79 files in other folders)
