[workspace]
members = [
    "scratchstack-arn",
    "scratchstack-aspen",
    "scratchstack-aws-signature",
    "scratchstack-config",
    "scratchstack-errors",
]
resolver = "2"

[workspace.package]
authors = [
    "David Cuthbert <dacut@kanga.org>",
]
edition = "2024"
homepage = "https://github.com/dacut/scratchstack"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dacut/scratchstack.git"
version = "0.12.0"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
bytes = "1.2"
chrono = { version = "0.4", default-features = false }
derive_builder = "0.20"
encoding = "0.2"
env_logger = "0.11"
futures = "0.3"
hex = "0.4"
hmac = "0.12.1"
http = "1.3"
http-body = "1.0"
humantime = "2.2"
humantime-serde = "1.1"
hyper = "1.8"
indoc = "2.0"
ipnet = "2.5"
lazy_static = "1.5"
log = "0.4"
pretty_assertions = "1.4"
qualifier_attr = "0.2.2"
quick-xml = "0.25"
rand = "0.8"
regex = "1.11"
rustls = "0.22"
rustls-pemfile = "2.2"
rustls-pki-types = "1.12"
serde = "1"
serde_json = "1"
sha2 = "0.10"
sqlx = "0.8"
subtle = "2.6"
test-log = "0.2"
tokio = "1.49"
tokio-rustls = "0.23"
tokio-test = "0.4"
toml = "0.9"
tower = "0.5"
uuid = "1.2"