[workspace]
members = [
    "scratchstack-arn",
    "scratchstack-aspen",
    "scratchstack-aws-principal",
    "scratchstack-aws-signature",
    "scratchstack-bootstrap",
    "scratchstack-cli-utils",
    "scratchstack-config",
    "scratchstack-database",
    "scratchstack-errors",
    "scratchstack-http-framework",
    "scratchstack-pagination",
    "scratchstack-service-sts",
    "scratchstack-shapegen",
    "scratchstack-shapes-iam",
]
resolver = "2"

[workspace.package]
authors = [
    "David Cuthbert <dacut@kanga.org>",
]
edition = "2024"
homepage = "https://github.com/dacut/scratchstack"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dacut/scratchstack.git"
version = "0.12.0"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
arrayvec = "0.7"
async-trait = "0.1"
axum = "0.8"
axum-extra = "0.12"
aws-sigv4 = "1.4"
aws-smithy-runtime-api = "1.12"
aws-smithy-types = "1.4"
aws-types = "1.3"
base32 = "0.5"
base64 = "0.22"
bytes = "1.2"
chrono = { version = "0.4", default-features = false }
clap = "4.5"
derive_builder = "0.20"
encoding_rs = "0.8"
env_logger = "0.11"
form_urlencoded = "1.2"
futures = "0.3"
hex = "0.4"
hmac = "0.12.1"
http = "1.3"
http-body = "1.0"
http-body-util = "0.1"
humantime = "2.2"
humantime-serde = "1.1"
hyper = "1.8"
indoc = "2.0"
ipnet = "2.5"
lazy_static = "1.5"
log = "0.4"
lru = "0.16"
pct-str = "3.0"
postcard = "1.1"
postgresql_commands = "0.20"
postgresql_embedded = { version = "0.20", default-features = false }
pretty_assertions = "1.4"
qualifier_attr = "0.2.2"
quick-xml = "0.25"
rand = "0.10"
regex = "1.11"
rpassword = "7.4"
rustls = "0.23"
rustls-pemfile = "2.2"
rustls-pki-types = "1.12"
serde = "1"
serde_json = "1"
sha2 = "0.10"
sqlx = "0.8"
strum = "0.28"
strum_macros = "0.28"
subtle = "2.6"
tempfile = "3.27"
test-log = "0.2"
tokio = "1.49"
tokio-rustls = "0.26"
tokio-test = "0.4"
toml = "1.1"
tower = "0.5"
typed-arena = "2.0"
uuid = "1.22"
whoami = "2.1"
