[package]
name = "scratchstack-aws-principal"
description = "Principal types for AWS/AWS-like services"
version = "0.3.1"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["AWS", "IAM", "Aspen", "policy"]
homepage = "https://github.com/dacut/scratchstack-aws-principal"
repository = "https://github.com/dacut/scratchstack-aws-principal"

[features]
service = []

[dependencies]
log = "^0.4"

[dev-dependencies]
env_logger = "^0.8"
test-env-log = "^0.2"
