[workspace]
members = [
    "arn",
    "errors",
    "principal",
]
resolver = "2"

[workspace.package]
authors = ["David Cuthbert <dacut@kanga.org"]
edition = "2021"
homepage = "https://github.com/dacut/scratchstack-core"
license = "MIT"
repository = "https://github.com/dacut/scratchstack-core"
version = "0.4.8"
