[package]
name = "scratchstack-aws-principal"
description = "Principal types for AWS/AWS-like services"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["AWS", "IAM", "Aspen"]
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
scratchstack-arn = { version = "0.4.0", path = "../arn" }
