[package]
name = "scratchstack-aws-principal"
description = "Principal types for AWS/AWS-like services"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["AWS", "IAM", "Aspen"]
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chrono = "^0.4"
base64 = "^0.13"
scratchstack-arn = { path = "../arn" }
