[package]
name = "scratchstack-aws-principal"
description = "Principal types for AWS/AWS-like services"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["AWS", "IAM", "Aspen"]
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "^0.4", default-features = false, features = [ "std" ] }
base64 = "^0.13"
scratchstack-arn = { version = "0.4.7", path = "../arn" }
