[package]
name = "scratchstack-arn"
description = "Basic Amazon Resource Name (ARN) type"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["AWS", "IAM", "Aspen"]
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "scratchstack_arn"
test = true
doctest = false
doc = true

[dependencies]
regex = { version = "^1.6" }
regex-syntax = { version = "^0.6" }

[dev-dependencies]
env_logger = { version = "^0.9" }
