[package]
name = "scratchstack-arn"
description = "Basic Amazon Resource Name (ARN) type"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["AWS", "IAM", "Aspen"]
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "scratchstack_arn"
test = true
doctest = false
doc = true

[dependencies]
regex = "^1.6"
regex-syntax = "^0.6"
serde = "^1"

[dev-dependencies]
env_logger = "^0.9"
pretty_assertions = "^1.3"
serde_json = "^1"
