[package]
name = "scratchstack-arn"
description = "Basic Amazon Resource Name (ARN) type"
keywords = ["AWS", "IAM", "Aspen"]

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "scratchstack_arn"
test = true
doctest = false
doc = true

[dependencies]
serde.workspace = true

[dev-dependencies]
env_logger.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
