[package]
name = "scratchstack-aspen"
description = "AWS IAM policy language (Aspen) parser and internal representation"
authors = [ "David Cuthbert <dacut@kanga.org>" ]
edition = "2021"
homepage = "https://github.com/dacut/scratchstack-aspen"
keywords = [ "AWS", "IAM", "Aspen" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dacut/scratchstack-aspen"
version = "0.2.1"

[lib]
name = "scratchstack_aspen"

[dependencies]
base64 = "^0.13"
chrono = "^0.4"
derive_builder = "^0.11"
ipnet = "^2.5"
lazy_static = "^1.4.0"
log = "^0.4"
regex = "^1.6"
scratchstack-arn = "^0.4.7"
scratchstack-aws-principal = "^0.4.7"
serde_json = "^1.0"

[dependencies.serde]
version = "^1.0"
features = [ "derive" ]

[dev-dependencies]
env_logger = "^0.8"
indoc = "^1.0"
pretty_assertions = "^1.3"
test-log = "^0.2"
