[package]
name = "scratchstack-aspen"
description = "AWS IAM policy language (Aspen) parser and internal representation"
keywords = [ "AWS", "IAM", "Aspen" ]

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "scratchstack_aspen"

[dependencies]
base64.workspace = true
chrono.workspace = true
derive_builder.workspace = true
ipnet.workspace = true
lazy_static.workspace = true
log.workspace = true
regex.workspace = true
scratchstack-arn.path = "../scratchstack-arn"
scratchstack-aws-principal.path = "../scratchstack-aws-principal"
serde = { workspace = true, features = [ "derive" ]}
serde_json.workspace = true

[dev-dependencies]
env_logger.workspace = true
indoc.workspace = true
pretty_assertions.workspace = true
test-log.workspace = true
