[package]
name = "scratchstack-aws-principal"
description = "Principal types for AWS/AWS-like services"
keywords = ["AWS", "IAM", "Aspen"]

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
chrono = { workspace = true, features = [ "alloc" ] }
scratchstack-arn.path = "../scratchstack-arn"
