[package]
name = "scratchstack-aws-signature"
description = "AWS SigV4 signature verification"
exclude = ["tests/*"]
keywords = ["AWS", "Amazon", "SigV4"]
readme = "README.md"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[lib]
name = "scratchstack_aws_signature"

[features]
axum = [ "dep:axum" ]
default = [ "axum" ]
unstable = []

[dependencies]
axum = { workspace = true, optional = true }
bytes.workspace = true
chrono.workspace = true
derive_builder.workspace = true
encoding_rs.workspace = true
hex.workspace = true
hmac.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
lazy_static.workspace = true
log.workspace = true
qualifier_attr.workspace = true
regex.workspace = true
sha2.workspace = true
scratchstack-aws-principal.path = "../scratchstack-aws-principal"
scratchstack-errors.path = "../scratchstack-errors"
subtle.workspace = true
tokio = { workspace = true, optional = true, features = [ "io-util" ] }
tower = { workspace = true, features = [ "util" ]}

[dev-dependencies]
axum.workspace = true
env_logger.workspace = true
tokio = { workspace = true, features = [ "macros", "rt" ] }
tokio-test.workspace = true
test-log.workspace = true
