[package]
name = "scratchstack-config"
version = "0.1.1"
edition = "2021"
description = "Scratchstack configuration schema and logic"
homepage = "https://github.com/dacut/scratchstack-config"
repository = "https://github.com/dacut/scratchstack-config"
license = "MIT"
readme = "README.md"

[dependencies]
base64 = "^0.13"
chrono = { version = "^0.4", default-features = false, features = [ "std" ] }
futures = "^0.3"
humantime = "^2.1"
humantime-serde = "^1.1"
log = "^0.4"
rustls = "^0.20"
serde = { version = "^1.0", features = ["derive"] }
toml = "^0.5"
tokio-rustls = "^0.23"
tower = "^0.4"

[dependencies.sqlx]
# Forking 0.6.2 to fix a libsqlite3 vulnerability until 0.7 is released
git = "https://github.com/dacut/sqlx.git"
branch = "0.6.2-sqlite-fix"
features = ["all-databases", "chrono", "macros", "migrate", "runtime-tokio-rustls"]
