[package]
name = "scratchstack-config"
description = "Scratchstack configuration schema and logic"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
humantime.workspace = true
humantime-serde.workspace = true
pct-str.workspace = true
log.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
serde = { workspace = true, features = [ "derive" ] }
sqlx = { workspace = true, features = [ "all-databases", "chrono", "macros", "migrate", "runtime-tokio-rustls" ] }
toml.workspace = true
tokio = { workspace = true, features = [ "fs", "io-util", "macros", "time" ] }
