[package]
name = "scratchstack-database"
description = "Database schema and types for Scratchstack services"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[features]
default = ["dump", "gsk-direct", "load", "mysql", "postgres", "schema", "sqlite"]
dump = []
gsk-direct = ["dep:scratchstack-arn"]
load = []
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
schema = []
sqlite = ["sqlx/_sqlite"]

[dependencies]
arrayvec = { workspace = true, features = ["serde"] }
base32.workspace = true
chrono = { workspace = true, features = ["clock", "serde", "std"] }
derive_builder.workspace = true
futures.workspace = true
log.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
rustls.workspace = true
scratchstack-arn = { path = "../scratchstack-arn", optional = true }
scratchstack-aws-principal.path = "../scratchstack-aws-principal"
scratchstack-aws-signature = { path = "../scratchstack-aws-signature", features = ["unstable"] }
scratchstack-errors.path = "../scratchstack-errors"
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = [
    "chrono",
    "macros",
    "migrate",
    "runtime-tokio-rustls",
] }
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-rustls.workspace = true
tower.workspace = true

[dev-dependencies]
env_logger.workspace = true
pretty_assertions.workspace = true
regex.workspace = true
test-log.workspace = true
aws-sigv4 = { workspace = true, features = ["sign-http"] }

[[test]]
name = "gsk_sqlite_test"
path = "tests/gsk_sqlite_test.rs"
test = true
required-features = ["sqlite"]