[package]
name = "scratchstack-database"
description = "Database schema and types for Scratchstack services"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[features]
default = ["dump", "gsk-direct", "iam", "load"]
dump = []
gsk-direct = ["iam", "dep:scratchstack-arn"]
iam = ["dep:scratchstack-shapes"]
load = []

[dependencies]
anyhow = { workspace = true }
arrayvec = { workspace = true, features = ["serde"] }
base32.workspace = true
base64.workspace = true
clap = { workspace = true, optional = true, features = ["derive"] }
chrono = { workspace = true, features = ["clock", "serde", "std"] }
derive_builder.workspace = true
futures.workspace = true
indoc.workspace = true
log.workspace = true
pct-str.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
regex.workspace = true
rustls.workspace = true
scratchstack-arn = { path = "../scratchstack-arn", optional = true }
scratchstack-aws-principal.path = "../scratchstack-aws-principal"
scratchstack-aws-signature = { path = "../scratchstack-aws-signature", features = ["unstable"] }
scratchstack-shapes = { path = "../scratchstack-shapes", optional = true }
scratchstack-errors.path = "../scratchstack-errors"
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
] }
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-rustls.workspace = true
tower.workspace = true

[dev-dependencies]
aws-sigv4 = { workspace = true, features = ["sign-http"] }
env_logger.workspace = true
postgresql_commands.workspace = true
postgresql_embedded = { workspace = true, features = [ "rustls", "theseus", "tokio" ] }
pretty_assertions.workspace = true
rand = { workspace = true, features = ["thread_rng"] }
regex.workspace = true
serde_json.workspace = true
tempfile.workspace = true
test-log.workspace = true
