[package]
name = "scratchstack-database"
description = "Database schema and types for Scratchstack services"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[features]
default = ["dump", "gsk-direct", "iam", "load", "utils"]
dump = []
gsk-direct = ["iam", "dep:scratchstack-arn"]
iam = ["dep:scratchstack-shapes"]
load = []
utils = ["dep:postgresql_commands", "dep:postgresql_embedded", "dep:tempfile"]

[dependencies]
anyhow = { workspace = true }
arrayvec = { workspace = true, features = ["serde"] }
base32.workspace = true
base64.workspace = true
clap = { workspace = true, optional = true, features = ["derive"] }
chrono = { workspace = true, features = ["clock", "serde", "std"] }
derive_builder.workspace = true
futures.workspace = true
indoc.workspace = true
log.workspace = true
pct-str.workspace = true
postgresql_commands = { workspace = true, optional = true }
postgresql_embedded = { workspace = true, optional = true, features = [ "rustls", "theseus", "tokio" ] }
rand = { workspace = true, features = ["std", "std_rng"] }
regex.workspace = true
rustls.workspace = true
scratchstack-arn = { path = "../scratchstack-arn", optional = true }
scratchstack-aws-principal.path = "../scratchstack-aws-principal"
scratchstack-aws-signature = { path = "../scratchstack-aws-signature", features = ["unstable"] }
scratchstack-errors.path = "../scratchstack-errors"
scratchstack-pagination.path = "../scratchstack-pagination"
scratchstack-shapes = { path = "../scratchstack-shapes", optional = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio-rustls",
] }
tempfile = { workspace = true, optional = true }
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-rustls.workspace = true
tower.workspace = true
uuid.workspace = true

[dev-dependencies]
aws-sigv4 = { workspace = true, features = ["sign-http"] }
env_logger.workspace = true
pretty_assertions.workspace = true
rand = { workspace = true, features = ["thread_rng"] }
regex.workspace = true
serde_json.workspace = true
test-log.workspace = true
