[package]
name = "scratchstack-errors"
description = "Error trait for AWS/AWS-like services"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = ["AWS"]
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = { version = "^1.1" }