[package]
name = "scratchstack-errors"
description = "Error trait for AWS/AWS-like services"
keywords = [ "AWS" ]

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
http.workspace = true