[package]
name = "scratchstack-http-framework"
description = "HTTP framework for Scratchstack services"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[features]
gsk_direct = [ "scratchstack-arn", "sqlx" ]

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = [ "clock", "std" ]}
derive_builder.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
hyper = { workspace = true, features = [ "http1", "http2", "runtime", "server", "tcp" ] }
log.workspace = true
quick-xml = { workspace = true, features = [ "serialize" ]}
rand = { workspace = true, features = [ "std", "std_rng" ]}
rustls.workspace = true
scratchstack-arn.path = "../scratchstack-arn"
scratchstack-aws-principal.path = "../scratchstack-aws-principal"
scratchstack-aws-signature.path = "../scratchstack-aws-signature"
scratchstack-errors.path = "../scratchstack-errors"
serde = { workspace = true, features = [ "derive" ]}
sqlx = { workspace = true, optional = true, features = [ "all-databases", "chrono", "macros", "migrate", "runtime-tokio-rustls" ] }
tokio = { workspace = true, features = [ "macros", "rt" ]}
tokio-rustls.workspace = true
tower.workspace = true
uuid = { workspace = true, features = [ "serde" ]}

[dev-dependencies]
env_logger.workspace = true
hyper { workspace = true, features = [ "client", "server", "stream", "tcp", "http1", "http2" ] }
pretty_assertions.workspace = true
regex.workspace = true
test-log.workspace = true
