[package]
name = "scratchstack-http-framework"
description = "HTTP framework for Scratchstack services"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[features]
default = ["axum", "gsk-direct"]
axum = ["dep:axum"]
gsk-direct = ["dep:scratchstack-arn"]

[dependencies]
axum = { workspace = true, optional = true }
async-trait.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["clock", "std"] }
derive_builder.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
log.workspace = true
quick-xml = { workspace = true, features = ["serialize"] }
rand = { workspace = true, features = ["std", "std_rng"] }
rustls.workspace = true
scratchstack-arn = { path = "../scratchstack-arn", optional = true }
scratchstack-aws-principal.path = "../scratchstack-aws-principal"
scratchstack-aws-signature = { path = "../scratchstack-aws-signature", features = ["unstable"] }
scratchstack-errors.path = "../scratchstack-errors"
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, optional = true, features = [
    "all-databases",
    "chrono",
    "macros",
    "migrate",
    "runtime-tokio-rustls",
] }
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-rustls.workspace = true
tower.workspace = true
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
env_logger.workspace = true
http-body-util.workspace = true
pretty_assertions.workspace = true
regex.workspace = true
test-log.workspace = true
aws-sigv4 = { workspace = true, features = ["sign-http"] }
