[package]
name = "scratchstack-pagination"
description = "Pagination token types and utilities"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["now"] }
derive_builder.workspace = true
lru.workspace = true
postcard = { workspace = true, features = ["use-std"] }
serde = { workspace = true, features = ["derive"] }
tower = { workspace = true, features = ["util"] }
uuid.workspace = true

[dev-dependencies]
env_logger.workspace = true
pretty_assertions.workspace = true
test-log.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true, features = ["v4"] }
