[package]
name = "scratchstack-service-sts"
description = "An implementation of the AWS Security Token Service"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
derive_builder.workspace = true
env_logger.workspace = true
form_urlencoded.workspace = true
futures.workspace = true
getopts = "^0.2"
http.workspace = true
http-body.workspace = true
log.workspace = true
quick-xml = { workspace = true, features = [ "serialize" ]}
rustls.workspace = true
scratchstack-arn.path = "../scratchstack-arn"
scratchstack-aws-signature.path = "../scratchstack-aws-signature"
scratchstack-aws-principal.path = "../scratchstack-aws-principal"
scratchstack-config.path = "../scratchstack-config"
serde = { workspace = true, features = [ "derive" ]}
sqlx = { workspace = true, features = [ "all-databases", "chrono", "macros", "migrate", "runtime-tokio-rustls" ]}
tokio = { workspace = true, features = [ "net", "rt-multi-thread" ]}
tokio-rustls.workspace = true
tower.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-log.workspace = true
