[package]
name = "scratchstack-service-sts"
description = "An implementation of the AWS Security Token Service"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
axum = { workspace = true, features = [ "form", "http1", "http2", "macros", "original-uri", "query", "tokio", "tower-log", "tracing" ] }
chrono.workspace = true
clap = { workspace = true, features = [ "derive" ] }
derive_builder.workspace = true
env_logger.workspace = true
form_urlencoded.workspace = true
futures.workspace = true
http.workspace = true
http-body.workspace = true
log.workspace = true
quick-xml = { workspace = true, features = [ "serialize" ] }
rustls.workspace = true
scratchstack-arn.path = "../scratchstack-arn"
scratchstack-aws-signature = { path = "../scratchstack-aws-signature", features = [ "unstable" ] }
scratchstack-aws-principal.path = "../scratchstack-aws-principal"
scratchstack-config.path = "../scratchstack-config"
scratchstack-database.path = "../scratchstack-database"
scratchstack-http-framework.path = "../scratchstack-http-framework"
serde = { workspace = true, features = [ "derive" ]}
sqlx = { workspace = true, features = [ "all-databases", "chrono", "macros", "migrate", "runtime-tokio-rustls" ] }
tokio = { workspace = true, features = [ "net", "rt-multi-thread" ] }
tokio-rustls.workspace = true
tower.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-log.workspace = true
