[package]
name = "scratchstack-shapes-iam"
description = "AWS Identity and Access Management shapes for Scratchstack services"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[features]
default = ["clap"]
clap = ["dep:clap"]

[build-dependencies]
anyhow.workspace = true
scratchstack-shapegen = { path = "../scratchstack-shapegen" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dependencies]
anyhow.workspace = true
aws-smithy-runtime-api.workspace = true
aws-smithy-types.workspace = true
aws-types.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, optional = true, features = ["derive"] }
derive_builder.workspace = true
regex.workspace = true
scratchstack-arn.path = "../scratchstack-arn"
scratchstack-cli-utils.path = "../scratchstack-cli-utils"
serde = { workspace = true, features = ["derive"] }
# smithy-runtime-api.workspace = true

[dev-dependencies]
chrono = { workspace = true, features = ["clock"] }
env_logger.workspace = true
pretty_assertions.workspace = true
regex.workspace = true
test-log.workspace = true
