[package]
name = "scratchstack-shapes"
description = "API shapes for Scratchstack services"

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[features]
default = ["clap", "iam"]
clap = ["dep:clap"]
iam = ["chrono/serde"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, optional = true, features = ["derive"] }
derive_builder.workspace = true
regex.workspace = true
scratchstack-arn = { path = "../scratchstack-arn" }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
chrono = { workspace = true, features = ["clock"] }
env_logger.workspace = true
pretty_assertions.workspace = true
regex.workspace = true
test-log.workspace = true
