[package]
name = "scratchstack-get-signing-key-direct"
version = "0.1.0"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2021"
description = "Return signing keys directly from the database"
homepage = "https://github.com/dacut/scratchstack"
repository = "https://github.com/dacut/scratchstack"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "^0.4" }
scratchstack-arn = { git = "https://github.com/dacut/scratchstack-core", branch = "main" }
scratchstack-aws-principal = { git = "https://github.com/dacut/scratchstack-core", branch = "main" }
scratchstack-aws-signature = { git = "https://github.com/dacut/scratchstack-aws-signature", branch = "main" }
sqlx = { version = "^0.6", features = ["all-databases", "chrono", "macros", "migrate", "runtime-tokio-rustls"]}
tower = { version = "^0.4" }